--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,7 @@ h4 {
 }
 
 .intro__nav-item {
+    position: relative;
     display: grid;
     height: 8rem;
     grid-template-columns: repeat(1, 1fr);
@@ -288,11 +289,13 @@ h4 {
     box-shadow: 0 0 0.2rem var(--color-shadows);
     user-select: none;
     background-color: var(--color-light);
+    color: var(--color-link);
 }
 
 .intro__nav-item:hover {
     cursor: pointer;
     box-shadow: 0 0 0.2rem var(--color-link-hover);
+    color: var(--color-link-hover);
 }
 
 .intro__nav-item:hover .intro__nav-icon-svg path {
@@ -305,6 +308,12 @@ h4 {
 
 .intro__nav-item:not(:last-child) {
     margin-bottom: 1rem;
+}
+
+.intro__nav-overlay-link {
+    position: absolute;
+    inset: 0;
+    z-index: 1;
 }
 
 .intro__nav-description {
