--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @use './base/reset';
 @use './base/base';
 @use './base/typography';
+@use './base/icons';
 @use './base/utils';
 
 @use './components/header';
